# bda

./: .gitignore  README.md  analysis.py  analysis_record.py  analyze_ratings_by_category.py  create_histograms_from_csv.py  create_scatter_plot.py  create_source_histogram.py  create_word_cloud.py  extract_column.py  hist.py  memo.md  perform_basic_analysis.py  pyproject.toml  requirements.txt  tfidf.py  transform.py
dataset_for_bda/: comments_clustered.csv  comments_extracted.csv  comments_extracted_subset.csv  comments_long_clustered.csv  comments_normalized_subset.csv  df_model_input.tmp.csv  merged2.csv  merged_comments_with_ratings copy.csv  merged_comments_with_ratings.csv  tasks_extracted.csv  tasks_extracted_chunk.csv  tasks_extracted_chunk_corrected.csv  tasks_extracted_chunk_subset.csv
src/: cmt_clustering.py  cmt_extract.py  cmt_merge.py  cmt_normalize.py  cmt_to_long.py  comment.py  fix_learnability.py  merge.py  nlp_normalize.py
src/data_eng/: increase_id.py  nlp.py  nlp_cmt.py
src/stan/: setup.py
src/stan/1/: hierarchical_ordered_logistic  hierarchical_ordered_logistic.stan  run.py
