[project]
name = "bda"
version = "0.1.0"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "japanize_matplotlib",
    "seaborn",
    "wordcloud",
    "scikit-learn",
    "spacy",
    "pyspellchecker",
    # uv pip install https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
    # "en-core-web-sm",
    "inflect",
    # CmdStan
    "cmdstanpy",
    "xarray",
]
